Footer fix for portait mode tablets
Fixed error with footer in portrait mode of tablets that caused contact info to cut off.

--- a/style.css
+++ b/style.css
@@ -225,7 +225,8 @@ header a{
 
 
 /* MEDIA QUERIES */
-@media screen and (min-width: 450px){
+@media screen and (min-width: 450px) and (orientation: landscape){
+	/***** NAVBAR *****/
 	header{
 		padding: 15px 2%;
 	}
@@ -256,7 +257,7 @@ header a{
 
 	.welcome-text{
 		top: clamp(15em, 28em + 2vw, 40em);
-		left: 27%;
+		left: 28vw;
 		white-space: nowrap;
 	}
 
@@ -276,15 +277,58 @@ header a{
 
 
 
+
+	/***** FOOTER *****/
+	.footer{
+		padding: 1em 0 1em 0;
+	}
 	.row{
 		display: flex;
 		flex-direction: row;
+		flex-wrap: wrap;
+		margin-left: 2em;
 	}
-	/* .footer-col ul li a:hover{
+	.footer-logo{
+		margin-top: 3em;
+	}
+	.footer-col ul li a:hover{
 		color: var(--accent-color);
-		padding-right: .6em;
-	} */
+	}
+	.footer-col{
+		width: 25%;
+		padding-left: 0vw 5vw;
+	}
+	#row-two ul li{
+		margin-top: 0em;
+		margin-bottom: 0em;
+		line-height: 2;
+	}
+
 }
+@media screen and (min-width: 450px) and (orientation: portrait){
+	.row{
+		display: grid;
+	}
+	#row-one{
+		grid-row: 1;
+		grid-column-start: 1;
+		grid-column-end: 4;
+	}
+	#row-two{
+		grid-row: 2;
+		grid-column: 2;
+	   }
+	#row-three{
+		grid-row: 2;
+		grid-column: 3;
+		margin-top: .5em;
+	}
+	.welcome-text{
+		left: 38vw;
+	}
+}
+
+
 
 
 @media screen and (min-width: 600px){
